fix: return gap for admin navlinks

--- a/src/widgets/AdminLayout/AdminNavbar/AdminNavbar.module.scss
+++ b/src/widgets/AdminLayout/AdminNavbar/AdminNavbar.module.scss
@@ -13,6 +13,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: space-around;
+        gap:15px;
         .adminLink {
             text-decoration: none;
             color:var(--color-text);
